# Expense-Auditor

./: LICENSE  README.md
.github/workflows/: azure-static-web-apps-icy-flower-09f6e481e.yml
backend/: function_app.py
backend-fastapi/: .dockerignore  Dockerfile  pyproject.toml
backend-fastapi/app/: main.py
backend-fastapi/app/core/: config.py  security.py
backend-fastapi/app/models/: audit.py
backend-fastapi/app/services/: blob_service.py  chat_service.py  policy_service.py
backend-fastapi/app/utils/: clerk.py  prompts.py
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  styles.css
frontend/src/components/: DisputeModal.tsx  Navbar.tsx  NoOrganisation.tsx  Sidebar.tsx  ThemeToggle.tsx  UploadModal.tsx  UserCard.tsx
frontend/src/routes/: __root.tsx  index.tsx  invite.tsx  sign-in.$.tsx  sign-up.$.tsx
frontend/src/routes/dashboard/: expenses.tsx  index.tsx  organisation.tsx  route.tsx  upload_policy.tsx
frontend/src/utils/: auth.ts  clerk.ts
frontend/types/: globals.d.ts
